feat: add todos time index; improve theme switch; fix layout

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-plugin-svelte": "^3.0.0",
 		"fast-average-color": "^9.5.0",
 		"globals": "^16.0.0",
+		"gsap": "^3.13.0",
 		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
