--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,11 +5,12 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "later-app",
+	"compatibility_flags": ["nodejs_compat"],
 	"compatibility_date": "2025-06-19",
 	"pages_build_output_dir": ".svelte-kit/cloudflare",
 	"observability": {
-		"enabled": true
-	}
+		"enabled": true,
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
