--- a/package.json
+++ b/package.json
@@ -16,34 +16,36 @@
 		"cf-typegen": "wrangler types src/worker-configuration.d.ts"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@lucide/svelte": "^0.518.0",
+		"@duydang2311/attempt": "^0.0.8",
+		"@eslint/compat": "^1.3.0",
+		"@eslint/js": "^9.29.0",
+		"@lucide/svelte": "^0.522.0",
 		"@material/material-color-utilities": "^0.3.0",
 		"@sveltejs/adapter-cloudflare": "^7.0.4",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/postcss": "^4.1.10",
-		"@tiptap/core": "^2.14.1",
-		"@tiptap/extension-placeholder": "^2.14.1",
-		"@tiptap/pm": "^2.14.1",
-		"@tiptap/starter-kit": "^2.14.1",
+		"@tiptap/core": "^2.22.1",
+		"@tiptap/extension-placeholder": "^2.22.1",
+		"@tiptap/pm": "^2.22.1",
+		"@tiptap/starter-kit": "^2.22.1",
 		"colorthief": "^2.6.0",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
+		"eslint": "^9.29.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.3",
 		"fast-average-color": "^9.5.0",
-		"globals": "^16.0.0",
+		"globals": "^16.2.0",
 		"gsap": "^3.13.0",
+		"idb": "^8.0.3",
 		"postcss": "^8.5.6",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.4.0",
+		"svelte": "^5.34.7",
+		"svelte-check": "^4.2.2",
 		"tailwindcss": "^4.1.10",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6",
-		"wrangler": "^4.20.3"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.34.1",
+		"vite": "^6.3.5",
+		"wrangler": "^4.20.5"
 	}
 }
