refactor: update todos schema; move data loading to load function

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tiptap/extension-placeholder": "^2.22.1",
 		"@tiptap/pm": "^2.22.1",
 		"@tiptap/starter-kit": "^2.22.1",
+		"@types/slug": "^5.0.9",
 		"colorthief": "^2.6.0",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -38,9 +39,11 @@
 		"globals": "^16.2.0",
 		"gsap": "^3.13.0",
 		"idb": "^8.0.3",
+		"nanoid": "^5.1.5",
 		"postcss": "^8.5.6",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
+		"slug": "^11.0.0",
 		"svelte": "^5.34.7",
 		"svelte-check": "^4.2.2",
 		"tailwindcss": "^4.1.10",
